<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:anna="http://schemas.android.com/apk/res/com.swdn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/main_content_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/top_bg"
        android:orientation="horizontal" >

        <com.swdn.widget.ChangeColorIconWithText
            android:id="@+id/tab_operation"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            anna:icon="@drawable/main_bottom_tab_home_normal"
            anna:text="@string/tab_operation"
            anna:text_size="12sp"
            anna:color="#ff45c01a" />

        <com.swdn.widget.ChangeColorIconWithText
            android:id="@+id/tab_alarm"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            anna:icon="@drawable/main_bottom_tab_network_normal"
            anna:text="@string/tab_alarm"
           anna:text_size="12sp"
            anna:color="#ff45c01a" />

        <com.swdn.widget.ChangeColorIconWithText
            android:id="@+id/tab_test"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            anna:icon="@drawable/main_bottom_tab_cart_normal"
            anna:text="@string/tab_test"
            anna:text_size="12sp"
            anna:color="#ff45c01a" />

        <com.swdn.widget.ChangeColorIconWithText
            android:id="@+id/tab_personal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            anna:icon="@drawable/main_bottom_tab_personal_normal"
            anna:text="@string/tab_personal"
            anna:text_size="12sp"
            anna:color="#ff45c01a" />
    </LinearLayout>

</LinearLayout>