<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TableLayout
        android:id="@+id/loginPanel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:stretchColumns="1" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_span="2"
                android:src="@drawable/logo" >
            </ImageView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/account"
                android:textColor="@color/blackgrey"
                android:textSize="20sp" >
            </TextView>

            <EditText
                android:id="@+id/accountEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/login_edit_background"
                android:focusable="true"
                android:hint="@string/account_hint"
                android:textColor="@color/black" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/password"
                android:textColor="@color/blackgrey"
                android:textSize="20sp" >
            </TextView>

            <EditText
                android:id="@+id/passwordEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/login_edit_background"
                android:ems="10"
                android:hint="@string/password_hint"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/black" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/loginButton"
                android:layout_height="40dp"
                android:layout_span="2"
                android:background="@drawable/login_button_background"
                android:text="@string/login_btn" />
        </TableRow>
    </TableLayout>

</RelativeLayout>