<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingTop="0dp" >

    <!-- 标题栏 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bg"
        android:paddingBottom="0dp"
        android:paddingTop="0dp" >

        <ImageView
            android:id="@+id/inspection_list_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:src="@drawable/abc_ic_ab_back_holo_light" />

        <ImageView
            android:id="@+id/SendAshamed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="15dp"
            android:src="@drawable/icon_post_enable" />

        <TextView
            android:id="@+id/inspection_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/inspection_list_text"
            android:textColor="#FFFFFF" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/insepection_list"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/date_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#00000000"
            android:src="@drawable/main_bottom_tab_home_normal_">
        </ImageButton>

        <ImageButton
            android:id="@+id/type_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" 
            android:background="#00000000"
            android:src="@drawable/qr_button">
        </ImageButton>

        <SearchView
            android:id="@+id/search_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:queryHint="@string/search" >
        </SearchView>
    </LinearLayout>
        
    <!-- 加载控件 -->
    <LinearLayout
        android:id="@+id/load_progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp" >

        <ProgressBar
            style="@style/myProgressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/list_loding"
            android:textColor="#815F3D"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/ListNoValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="@string/list_no_value"
        android:textColor="#815F3D"
        android:textSize="18sp"
        android:visibility="gone" />
 <com.swdn.widget.WheelView
        android:id="@+id/wheelView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/ListGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:visibility="gone" >
    </LinearLayout>

</LinearLayout>