<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <com.swdn.widget.SlideShowView
        android:id="@+id/slideshowView"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/inspection_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/app_home_shortcuts_button_selector"
                    android:src="@drawable/inspection_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/inspection_btn"
                    android:layout_centerHorizontal="true"
                    android:text="@string/inspection_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/micro_text_size" />

                <TextView
                    android:id="@+id/inspection_count"
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/inspection_btn"
                    android:background="@drawable/tips_circle"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/tour_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/app_home_shortcuts_button_selector"
                    android:src="@drawable/tour_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tour_btn"
                    android:layout_centerHorizontal="true"
                    android:text="@string/tour_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/micro_text_size" />

                <TextView
                    android:id="@+id/tour_count"
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/tour_btn"
                    android:background="@drawable/tips_circle"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/repair_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/app_home_shortcuts_button_selector"
                    android:src="@drawable/repair_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/repair_btn"
                    android:layout_centerHorizontal="true"
                    android:text="@string/repair_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/micro_text_size" />

                <TextView
                    android:id="@+id/repair_count"
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/repair_btn"
                    android:background="@drawable/tips_circle"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/transformer_test_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/app_home_shortcuts_button_selector"
                    android:src="@drawable/transformer_test_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/transformer_test_btn"
                    android:layout_centerHorizontal="true"
                    android:text="@string/transformer_test_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/micro_text_size" />

                <TextView
                    android:id="@+id/transformer_test_count"
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/transformer_test_btn"
                    android:background="@drawable/tips_circle"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/switch_test_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/app_home_shortcuts_button_selector"
                    android:src="@drawable/switch_test_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/switch_test_btn"
                    android:layout_centerHorizontal="true"
                    android:text="@string/switch_test_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/micro_text_size" />

                <TextView
                    android:id="@+id/switch_test_count"
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/switch_test_btn"
                    android:background="@drawable/tips_circle"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/cubicle_test_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/app_home_shortcuts_button_selector"
                    android:src="@drawable/cubicle_test_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cubicle_test_btn"
                    android:layout_centerHorizontal="true"
                    android:text="@string/cubicle_test_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/micro_text_size" />

                <TextView
                    android:id="@+id/cubicle_test_count"
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/cubicle_test_btn"
                    android:background="@drawable/tips_circle"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/cable_test_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/app_home_shortcuts_button_selector"
                    android:src="@drawable/cable_test_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cable_test_btn"
                    android:layout_centerHorizontal="true"
                    android:text="@string/cable_test_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/micro_text_size" />

                <TextView
                    android:id="@+id/cable_test_count"
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/cable_test_btn"
                    android:background="@drawable/tips_circle"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/qr_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/app_home_shortcuts_button_selector"
                    android:src="@drawable/qr_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/qr_btn"
                    android:layout_centerHorizontal="true"
                    android:text="@string/qr_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/micro_text_size" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <!--  ImageButton
                    android:id="@+id/others_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/app_home_shortcuts_button_selector"
                    android:src="@drawable/qr_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/others_btn"
                    android:layout_centerHorizontal="true"
                    android:text="@string/qr_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/micro_text_size" />-->

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>